<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".today_fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:textColor="@color/green"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textColor="@color/white"
            android:textSize="14sp"

            android:layout_marginBottom="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/glass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_glass_empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="bottom"/>

            <TextView
                android:id="@+id/intake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/intake"
                android:textColor="@color/white"
                android:textSize="16sp"

                app:layout_constraintBottom_toBottomOf="@+id/glass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/transparent_glass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/add_1"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/green"
                android:text="@string/add_1"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/add_2"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/green"
                android:text="@string/add_2"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/add_3"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/green"
                android:text="@string/add_3"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>