<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_1"
    tools:context=".Settings">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_gravity="start"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_title"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_4" />

        <RelativeLayout
            android:id="@+id/units_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/units"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/unit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/unit"
                android:textColor="@color/green"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_4" />

        <RelativeLayout
            android:id="@+id/goal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/daily_goal"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/goal_value"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/unit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/unit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_4" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/containers_title"
            android:textColor="@color/gray_4"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_4" />

        <RelativeLayout
            android:id="@+id/c1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/container_1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/c1_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/c1_value"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/unit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/unit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_4" />

        <RelativeLayout
            android:id="@+id/c2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/container_2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/c2_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/c2_value"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/unit4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/unit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_4" />

        <RelativeLayout
            android:id="@+id/c3_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/container_3"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/c3_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/c3_value"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/unit5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_2"
                android:text="@string/unit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/settings_message"
            android:textColor="@color/gray_4"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>